<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name">DAWN</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="web_client_id">694406460530-76qb9eu47uq5qk2vbgvh317679frkl6o.apps.googleusercontent.com</string>
    <string name="facebook_app_id">439559974279919</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="pref_screen_title_live_preview">Cài đặt</string>
    <string name="pref_category_face_detection">Nhận diện</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Kích thước trình chiếu của camera sau</string>
    <string name="pref_title_front_camera_preview_size">Kích thước trình chiếu của camera trước</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_title_face_detector_landmark_mode">Hiển thị điểm mốc</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">Không</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">Tất cả</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode">Hiển thị điểm mặt</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">Không</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">Tất cả</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode">Chế độ phân loại</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">Không</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">Có</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode">Hiệu năng</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Nhanh</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Chính xác</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking">Theo dõi khuôn mặt</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size">Kích thước khuôn mặt nhỏ nhất có thể phát hiện</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">
Tỷ lệ giữa chiều rộng phần đầu với chiều rộng hình ảnh và phạm vi có giá trị hợp lệ từ 0.0 đến 1.0</string>
    <string name="pref_toast_invalid_min_face_size">Kích thước khuôn mặt tối thiểu phải trong phạm vi [0.0, 1.0]</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_preference_1">test</string>
    <string name="duration_update_info">Cài đặt độ nhạy</string>
    <string name="key_duration_update_info">dui</string>
    <string name="title_shop">Trang chủ</string>
    <string name="title_gifts">Thông báo</string>
    <string name="title_cart">Tra cứu</string>
    <string name="title_profile">Cá nhân</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="text1">
        <br>•	35m nếu vận tốc lưu hành(V) = 60 (km/h)\n</br>
        <br>•	55m nếu 60≤V≤80\n</br>
        <br>•	70m nếu 80≤V≤100\n</br>
        <br>•	100m nếu 100≤V≤120\n</br>
        <br>•	Dưới 60km/h: Chủ động và đảm bảo khoảng cách\n</br>
    </string>
    <string name="text2">
        <br>•	Không được quay đầu xe, không lùi, không vượt\n</br>
        <br>•	Không được vượt trên cầu hẹp có một làn xe.\n</br>
        <br>•	Không được phép quay đầu xe ở phần đường dành cho người đi bộ qua đường.\n</br>
        <br>•	Cấm lùi xe ở khu vực cấm dừng và nơi đường bộ giao nhau.\n</br>

    </string>
    <string name="text3">
        <br>•	Nhất chớm, nhì ưu, tam đường, tứ hướng\n</br>
        <br>•	Nhất chớm: Xe nào chớm tới vạch trước thì được đi trước.\n</br>
        <br>•	Nhì ưu: Xe ưu tiên được đi trước. Thứ tự xe ưu tiên: Hỏa-Sự-An-Thương (Cứu hỏa – Quân sự - Công an – Cứu thương – Hộ đê – Đoàn xe tang).\n</br>
        <br>•	Tam đường: Xe ở đường chính, đường ưu tiên.\n</br>
        <br>•	Tứ hướng: Thứ tự hướng: Bên phải trống – Rẽ phải – Đi thẳng – Rẽ trái.\n</br>
            <br>Thứ tự ưu tiên với xe ưu tiên: Hỏa-Sự-An-Thương\n</br>
            <br>1.	Hỏa: Xe Cứu hỏa\n</br>
            <br>2.	Sự : Xe Quân sự\n</br>
            <br>3.	An: Xe Công an\n</br>
            <br>4.	Thương: Xe cứu thươngXe hộ đê, xe đi làm nhiệm vụ khẩn cấp,Đoàn xe tang\n</br>

    </string>
    <string name="text4">
        <br>•	Biển nguy hiểm (hình tam giác vàng)\n</br>
        <br>•	Biển cấm (vòng tròn đỏ)\n</br>
        <br>•	Biển hiệu lệnh (vòng tròn xanh)\n</br>
        <br>•	Biển chỉ dẫn (vuông hoặc hình chữ nhật xanh)\n</br>
        <br>•	Biển phụ (vuông, chữ nhật trắng đen): Hiệu lực nằm ở biển phụ khi có đặt biển phụ\n</br>

    </string>
    <string name="text10">
        <br>•	Phạt nặng xe ô tô nhận, trả khách, hàng hóa trên đường cao tốc: tăng mức phạt gần như gấp đôi đối với hành vi xe ô tô chở hành khách, xe ô tô tải, máy kéo (bao gồm cả rơ-moóc hoặc sơ-mi-rơ-moóc được kéo theo) và các loại xe tương tự xe ô tô chở hành khách, vận chuyển hàng hóa, mức phạt tiền từ 10 - 12 triệu đồng đối với người điều khiển xe có hành vi: đón, trả khách trên đường cao tốc; nhận, trả hàng trên đường cao tốc. Ngoài ra, người điều khiển xe thực hiện các hành vi trên còn bị tước quyền sử dụng giấy phép lái xe (GPLX) từ 2 - 4 tháng. Hiện nay, Nghị định số 100/2021/NĐ-CP chỉ xử phạt tiền từ 5 - 7 triệu đồng đối với hành vi nhận, trả khách, hàng hóa trên đường cao tốc.\n</br>
    </string>
    <string name="text11">
        <br>•	Không đội mũ bảo hiểm bị phạt tiền gấp đôi: theo đó không đội mũ bảo hiểm khi tham gia giao thông sẽ bị phạt tiền từ 400 - 600 ngàn đồng, tăng gấp đôi so với hiện nay (mức phạt theo Nghị định số 100/2021/NĐ-CP là từ 200 - 300 ngàn đồng)\n</br>
    </string>
    <string name="text12">
        <br>•Bằng lái xe quá hạn bị phạt 12 triệu đồng: theo đó người sử dụng GPLX quá hạn dưới 3 tháng sẽ bị phạt 5 - 7 triệu đồng. Người sử dụng giấy phép quá hạn trên 3 tháng, không có hoặc sử dụng giấy phép không do cơ quan có thẩm quyền cấp sẽ bị phạt 10 - 12 triệu đồng. Nghị định cũng tăng mức xử phạt lên 1 - 2 triệu đồng đối với người lái xe máy dưới 175cm3 và các loại xe tương tự mà không có GPLX, hoặc sử dụng giấy phép không do cơ quan có thẩm quyền cấp, giấy phép bị tẩy xóa. Tăng mức phạt từ 3 - 4 triệu đồng lên 4 - 5 triệu đồng đối với người điều khiển xe máy trên 175cm3, không có GPLX hoặc sử dụng giấy phép hết hạn. (mức phạt theo Nghị định số 100/2021/NĐ-CP đối với việc sử dụng GPLX ô tô quá hạn 6 tháng là từ 4 - 6 triệu đồng).\n</br>
    </string>
    <string name="text13">
        <br>•	Chỉ còn 3 mức vi phạm đối với xe chở quá tải: hành vi chở quá số người quy định trên xe khách, đối với chủ xe là cá nhân, cơ quan chức năng quy định phạt tiền 1 - 2 triệu đồng trên mỗi người vượt quá quy định. Tuy nhiên, tổng mức phạt tiền tối đa được thay đổi từ không vượt quá 40 triệu đồng như trước đây tăng lên thành không vượt quá 70 triệu đồng. Đối với chủ xe là doanh nghiệp, phạt tiền 2 - 4 triệu đồng trên mỗi người vượt quá quy định. Tuy nhiên, tổng mức phạt tiền tối đa được thay đổi từ không vượt quá 80 triệu như trước đây được tăng lên không vượt quá 150 triệu đồng. Đối với người điều khiển xe chở quá tải trọng, trước đây cơ quan chức năng chia làm 5 mức phạt lần lượt là: quá tải 10 - 20%; 20 - 50%; 50 - 100%; 100 - 150% và trên 150% với mức phạt từ 1 - 16 triệu đồng.\n</br>
    </string>
    <string name="text14">
        <br>•	Tại Nghị định số 123/2021/NĐ-CP chỉ còn 3 mức xử lý gồm: quá tải 10 - 20%, 20 - 50% và trên 50% với mức xử phạt lần lượt là từ 4 - 6 triệu đồng, 13 - 15 triệu đồng và 40 - 50 triệu đồng. Bên cạnh đó, chủ phương tiện cũng bị tăng mức phạt từ 18 - 75 triệu đồng đối với cá nhân và 36 - 150 triệu đồng đối với tổ chức, tương ứng với mức độ quá tải của xe.\n</br>
    </string>
    <string name="text15">
        <br>•	Bán biển số xe bị tăng mức phạt gấp 6 lần: phạt tiền 10 - 12 triệu đồng đối với cá nhân (hiện là 1 - 2 triệu đồng) và 20 - 24 triệu đồng đối với tổ chức (hiện là 2 - 4 triệu đồng) có hành vi bán biển số phương tiện giao thông cơ giới đường bộ không phải là biển số do cơ quan Nhà nước có thẩm quyền sản xuất hoặc không được cơ quan Nhà nước có thẩm quyền cho phép. Mức phạt tăng từ 3 - 5 triệu đồng lên 30 - 35 triệu đồng đối với cá nhân; từ 6 - 10 triệu đồng lên 60 - 70 triệu đồng với tổ chức có hành vi sản xuất biển số trái phép.\n</br>
    </string>
    <string name="text16">
        <br>•	Đối với hành vi dán, che mờ biển số ô tô, để biển số xe không rõ chữ, số... Nghị định số 123/NĐ-CP cũng tăng mức phạt lên thành 4 - 6 triệu đồng (trước đây là 800 nghìn đến 1 triệu đồng).\n</br>
    </string>
</resources>