<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg"
    tools:context=".note">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/hdsd"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collabtoolbar"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/ctr_bg"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:contentScrim="@color/blue1"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Các luật xử phạt">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:subtitleTextColor="@color/white"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <View
                android:id="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/black"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="37dp" />


            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/text10"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/v1"/>


            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/text11"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/txt6"
                android:text="@string/text12"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txt4"/>


            <TextView
                android:id="@+id/txt8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/text13"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt10"
                android:layout_marginTop="0dp"
                android:text="@string/text14"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt8"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/txt12"
                android:layout_marginTop="0dp"
                android:text="@string/text15"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:id="@+id/txt14"
                android:text="@string/text16"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/txt12"/>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>